syntax = "proto3";

option go_package = "example.com/grpc/greet/proto";

message GreetRequest {
  string first_name = 1;
}

message GreetRespponse {
  string result = 1;
}

service GreetService {
  rpc Greet (GreetRequest) returns (GreetRespponse);
  rpc GreetManyTimes (GreetRequest) returns (stream GreetRespponse);
  rpc LongGreet (stream GreetRequest) returns (GreetRespponse);
}